[package]
name = "oni-mod-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.unzip]
git = "https://github.com/steph0de/rust-unzip.git"
tag = "0.1.2"

[dependencies]
steam-workshop-api = "0.2.5"
reqwest = "0.11.15"
error-chain = "0.12.4"
log = "0.4.17"